--- a/appointment/templates/appointment/base.html
+++ b/appointment/templates/appointment/base.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'consultation:show_triage' %}">Patients</a>
                     </li>
+                    <li class="nav-item">
+                        <a class='nav-link' href="{% url 'consultation:show_consultation' %}">Consultations</a>
+                    </li>
                     
                 </ul>
                 
