--- a/consultation/templates/consultation/edit_prescription.html
+++ b/consultation/templates/consultation/edit_prescription.html
@@ -1,24 +1,44 @@
 {% extends 'consultation/layout.html' %}
 {% block content %}
 
-<h3>Edit Prescription ({{ prescription.prescription_type.prescription_type|title }})</h3>
+<h3>Edit Prescription</h3>
 
-<div class="card p-3 shadow">
-    <form method="POST">
+<div class="edit_precription mb-3">
+    <div class="card p-3 shadow">
+
+        <form method="POST" action="{% url 'consultation:edit_prescription' consultation.id %}">
         {% csrf_token %}
 
-        <label class="form-label"><strong>Prescription Details</strong></label>
-        <textarea name="prescription" class="form-control" rows="6" required>
-{{ prescription.prescription }}
-        </textarea>
+        <!-- LAB -->
+        <div class="lab-prescr border border-dark rounded p-3 mb-3 shadow">
+            <h3 class="text-center">Laboratory Prescription</h3>
+
+            <textarea class="form-control bg-light" name="lab_prescri">
+            {% if lab_prescription %}
+                {{ lab_prescription.prescription }}
+            {% endif %}
+            </textarea>
+        </div>
+
+        <!-- MED -->
+        <div class="med-prescr border border-dark rounded p-3 mb-3 shadow">
+            <h3 class="text-center">Medication</h3>
+            <textarea class="form-control bg-light" name="med_prescri">
+                {% if med_prescription %}
+                    {{ med_prescription.prescription }}
+                {% endif %}
+            </textarea>
+        </div>
 
         <div class="mt-3 text-center">
-            <button class="btn btn-success" type="submit">Save Changes</button>
+            <button class="btn btn-success" type="submit">Update</button>
             <a href="{% url 'consultation:view_prescription' consultation.id %}" class="btn btn-secondary">
                 Cancel
             </a>
         </div>
-    </form>
+
+        </form>
+    </div>
 </div>
 
 {% endblock %}
