--- a/appointment/templates/appointment/base.html
+++ b/appointment/templates/appointment/base.html
@@ -34,7 +34,9 @@
                     <li class="nav-item">
                         <a class='nav-link' href="{% url 'consultation:show_consultation' %}">Consultations</a>
                     </li>
-                    
+                    <li class="nav-item">
+                        <a class='nav-link' href="{% url 'doctor:doctor_search' %}">Search</a>
+                    </li>
                 </ul>
                 
                 <ul class="navbar-nav">
