--- a/labtech/templates/labtech/layout.html
+++ b/labtech/templates/labtech/layout.html
@@ -23,10 +23,13 @@
                 <ul class="navbar-nav me-auto">
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'labtech:dashboard' %}">Dashboard</a>
+                        <a class="nav-link" href="{% url 'labtech:labtech_dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'labtech:show_tests' %}">My Availability</a>
+                        <a class="nav-link" href="{% url 'labtech:show_tests' %}">Prescription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'labtech:labtech_search' %}">Search</a>
                     </li>
                 </ul>
                 
