--- a/nurse/templates/nurse/layout.html
+++ b/nurse/templates/nurse/layout.html
@@ -19,13 +19,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'nurse:nurse_dashboard' %}">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'triage:show_appointments' %}">Appointments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'triage:log' %}">Log</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'nurse:dashboard' %}">Dashboard</a>
+                        <a class="nav-link" href="{% url 'nurse:nurse_search' %}">Search</a>
                     </li>
                 </ul>
                 
