--- a/pharmacist/templates/pharmacist/layout.html
+++ b/pharmacist/templates/pharmacist/layout.html
@@ -22,10 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'pharmacist:dashboard' %}">Dashboard</a>
+                        <a class="nav-link" href="{% url 'pharmacist:pharmacist_dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'pharmacist:show_medications' %}">Prescribed Medications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'pharmacist:pharmacist_search' %}">Search</a>
                     </li>
                     
                 </ul>
