--- a/patient/templates/patient/layout.html
+++ b/patient/templates/patient/layout.html
@@ -21,7 +21,7 @@
           </div>
         {% elif message.tags == 'error' %}
           <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong>Error!</strong>
+            <strong>{{message}}</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
         {% else %}
