--- a/patient/templates/patient/patient_login.html
+++ b/patient/templates/patient/patient_login.html
@@ -46,6 +46,9 @@
                 </small>
             </div>
         </form>
+        <div class="text-center mt-3">
+            <small class="text-muted">Guardian Hospital – Patient Portal</small>
+        </div>
 
     </div>
 </div>
