--- a/triage/templates/triage/triage_details.html
+++ b/triage/templates/triage/triage_details.html
@@ -49,8 +49,8 @@
             {% endif %}
         {% endif %}
         <div class="details_buttons d-flex justify-content-around">
-            <a href="{% url 'triage:edit_triage' triage.id %}" class="btn btn-outline-warning col-5">Edit</a>
-            <a href="{% url 'triage:log' %}" class="btn btn-outline-dark col-5">Back</a>
+            <a href="{% url 'triage:edit_triage' triage.id %}" class="btn btn-warning col-5">Edit</a>
+            <a href="{% url 'triage:log' %}" class="btn btn-dark col-5">Back</a>
         </div>
     </div>
 </div>
