--- a/pharmacist/templates/pharmacist/layout.html
+++ b/pharmacist/templates/pharmacist/layout.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     {% if pharmacist %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container">
             <a class="navbar-brand" href="">Pharmacist Portal</a>
             
