--- a/nurse/templates/nurse/layout.html
+++ b/nurse/templates/nurse/layout.html
@@ -38,8 +38,8 @@
                             {{ nurse }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" onclick="alert('Profile settings coming soon')">Profile Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <!-- <li><a class="dropdown-item" href="#" onclick="alert('Profile settings coming soon')">Profile Settings</a></li>
+                            <li><hr class="dropdown-divider"></li> -->
                             <li><a class="dropdown-item" href="{% url 'nurse:nurse_logout' %}">Logout</a></li>
                         </ul>
                     </li>
