--- a/pharmacist/templates/pharmacist/layout.html
+++ b/pharmacist/templates/pharmacist/layout.html
@@ -39,8 +39,8 @@
                             {{ pharmacist }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="" onclick="alert('Navigate to Profile Settings')">Profile Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <!-- <li><a class="dropdown-item" href="" onclick="alert('Navigate to Profile Settings')">Profile Settings</a></li>
+                            <li><hr class="dropdown-divider"></li> -->
                             <li><a class="dropdown-item" href="{% url 'pharmacist:pharmacist_logout' %}">Logout</a></li>
                         </ul>
                     </li>
