--- a/appointment/templates/appointment/base.html
+++ b/appointment/templates/appointment/base.html
@@ -45,8 +45,8 @@
                             Dr. {{ doctor.fname }} {{ doctor.lname }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'doctor:doctor_profile' %}" onclick="alert('Navigate to Profile Settings')">Profile Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <!-- <li><a class="dropdown-item" href="{% url 'doctor:doctor_profile' %}" onclick="alert('Navigate to Profile Settings')">Profile Settings</a></li>
+                            <li><hr class="dropdown-divider"></li> -->
                             <li><a class="dropdown-item" href="{% url 'doctor:doctor_logout' %}">Logout</a></li>
                         </ul>
                     </li>
