--- a/doctor/templates/doctor/base.html
+++ b/doctor/templates/doctor/base.html
@@ -19,13 +19,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'doctor:doctor_dashboard' %}">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'appointment:availability' %}">My Availability</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'appointment:doctor_appointments' %}">My Appointments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'doctor:dashboard' %}">Dashboard</a>
+                        <a class="nav-link" href="{% url 'consultation:show_triage' %}">Patients</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class='nav-link' href="{% url 'consultation:show_consultation' %}">Consultations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class='nav-link' href="{% url 'doctor:doctor_search' %}">Search</a>
                     </li>
                 </ul>
                 
@@ -35,8 +44,8 @@
                             Dr. {{ doctor.fname }} {{ doctor.lname }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" onclick="alert('Profile settings coming soon')">Profile Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <!-- <li><a class="dropdown-item" href="#" onclick="alert('Profile settings coming soon')">Profile Settings</a></li>
+                            <li><hr class="dropdown-divider"></li> -->
                             <li><a class="dropdown-item" href="{% url 'doctor:doctor_logout' %}">Logout</a></li>
                         </ul>
                     </li>
@@ -54,7 +63,7 @@
           </div>
         {% elif message.tags == 'error' %}
           <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong>Error!</strong>
+            <strong>{{message}}</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
         {% else %}
