--- a/labtech/templates/labtech/layout.html
+++ b/labtech/templates/labtech/layout.html
@@ -39,8 +39,8 @@
                         {{ labtech }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="" onclick="alert('Navigate to Profile Settings')">Profile Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                           <!-- <li><a class="dropdown-item" href="{% url 'labtech:profile' %}">Profile Settings</a></li>
+                            <li><hr class="dropdown-divider"></li> -->
                             <li><a class="dropdown-item" href="{% url 'labtech:labtech_logout' %}">Logout</a></li>
                         </ul>
                     </li>
